--- a/frontend/src/styles/MotionLight.css
+++ b/frontend/src/styles/MotionLight.css
@@ -1,14 +1,29 @@
 .accordion-container {
-    display: grid;
-    justify-content: left;
-    align-items: center;
-}
-.accordion-header {
-    background-color: black;
-}
-.info-container {
-    display: grid;
-    grid-gap: 10px;
+    display: flex;
     justify-content: center;
     align-items: center;
+    margin: 20px 0;
+}
+
+.accordion-header {
+    background-color: black;
+    color: white;
+}
+
+.info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .info-container {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 769px) {
+    .info-container {
+        flex-direction: row;
+    }
 }
